--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -17,8 +21,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tutorial-es6-mortgage-calculator</h1>
-        <p>My code for [ECMAScript 2015 (ES6) Tutorial with Babel 6 and Webpack](https://ccoenraets.github.io/es6-tutorial)</p>
+        <h1>Mortgage Calculator</h1>
         <p class="view"><a href="https://github.com/chriskwan/tutorial-es6-mortgage-calculator">View the Project on GitHub <small>chriskwan/tutorial-es6-mortgage-calculator</small></a></p>
         <ul>
           <li><a href="https://github.com/chriskwan/tutorial-es6-mortgage-calculator/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -26,18 +29,13 @@
           <li><a href="https://github.com/chriskwan/tutorial-es6-mortgage-calculator">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
+
       <section>
-        <h1>
-<a id="tutorial-es6-mortgage-calculator" class="anchor" href="#tutorial-es6-mortgage-calculator" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>tutorial-es6-mortgage-calculator</h1>
 
-<p>My code for the <a href="https://ccoenraets.github.io/es6-tutorial">ECMAScript 2015 (ES6) Tutorial with Babel 6 and Webpack</a></p>
-
-<h2>
-<a id="es6-tutorial" class="anchor" href="#es6-tutorial" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ES6 Tutorial</h2>
-
-<p>Start the tutorial <a href="http://ccoenraets.github.io/es6-tutorial">here</a>.</p>
       </section>
+
     </div>
+
     <footer>
       <p>Project maintained by <a href="https://github.com/chriskwan">chriskwan</a></p>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
