--- a/index.html
+++ b/index.html
@@ -32,6 +32,42 @@
 
       <section>
 
+        <div class="content">
+            <div class="form">
+                <div>
+                    <label>Principal:</label>
+                    <input type="text" id="principal" value="200000"/>
+                </div>
+                <div>
+                    <label>Years:</label>
+                    <input type="text" id="years" value="30"/>
+                </div>
+                <div>
+                    <label htmlFor="rate">Rate:</label>
+                    <input type="text" id="rate" value="5.0"/>
+                </div>
+                <div>
+                    <label htmlFor="calcBtn"></label>
+                    <button id="calcBtn">Calculate</button>
+                </div>
+            </div>
+            <h2>Monthly Payment: <span id="monthlyPayment" class="currency"></span></h2>
+            <h3>Monthly Rate: <span id="monthlyRate"></span></h3>
+            <table>
+                <thead>
+                <tr>
+                    <th>Year</th>
+                    <th class="principal">Principal</th>
+                    <th class="stretch"></th>
+                    <th class="interest"></th>
+                    <th>Balance</th>
+                </tr>
+                </thead>
+                <tbody id="amortization"></tbody>
+            </table>
+        </div>
+        <script src="build/main.bundle.js"></script>
+
       </section>
 
     </div>
